Fixed container margin spacing

--- a/web_static/styles/102-common.css
+++ b/web_static/styles/102-common.css
@@ -25,6 +25,7 @@
         display: flex;
         flex-direction: column;
         max-width: 100%;
+        margin-top: 5px;
     }
 
 }
